--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "homepage": "https://github.com/hariomgola/mongooseApplication-node.js#readme",
   "dependencies": {
     "chalk": "^4.1.2",
-    "mongoose": "^6.0.4"
+    "mongoose": "^6.0.4",
+    "validator": "^13.6.0"
   }
 }
